# howlong

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  clippy.yml  fmt.yml
src/: lib.rs  timer.rs  types.rs
src/clock/: darwin.rs  darwin_wrapper.h  mod.rs  posix.rs  win.rs
tests/: clock.rs  timer.rs
tests/utils/: mod.rs
