[package]
name = "howlong"
version = "0.1.0"
authors = ["Cheng XU <rust@xuc.me>"]
edition = "2018"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xu-cheng/howlong"
readme = "README.md"

[dependencies]
thiserror = "1.0"
cfg-if = "0.1"

[target.'cfg(unix)'.dependencies]
errno = "0.2"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["profileapi", "sysinfoapi"] }

[target.'cfg(unix)'.build-dependencies]
cc = "1.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.build-dependencies]
bindgen = "0.52"
